# ball_animation

./: 220502015_TalhaTuna_220502025_EmrahŞahin.docx  README.md  ball_animation.py
cpp/: CMakeLists.txt  KURULUM.md  README.md  README_SFML.md  SFML_KURULUM.md  ball_animation.cpp  build.bat  derle.bat  font_kopyala.bat  kurulum_ve_calistir.bat  sfml_indir.bat
